--- a/weblog/templates/weblog/postlike.html
+++ b/weblog/templates/weblog/postlike.html
@@ -23,14 +23,16 @@
 
                 </tr>
                 {% for like in likes %}
-                    <tr>
-                        <th><a href="{% url 'weblog:user_profile' like.username %}">{{like.username}}</a></th>
-                        <th><a href="{% url 'weblog:post' username_in_url like.blogPost_id.id %}">{{like.blogPost_id.title}}</a></th>
-                        <th><a href="{% url 'weblog:user_profile' like.blogPost_id.username %}">{{like.blogPost_id.username}}</a></th>
-                        <th><a>{{like.blogPost_id.pub_date}}</a></th>
+                    {% if like.likes == 1 %}
+                        <tr>
+                            <th><a href="{% url 'weblog:user_profile' like.username %}">{{like.username}}</a></th>
+                            <th><a href="{% url 'weblog:post' username_in_url like.blogPost_id.id %}">{{like.blogPost_id.title}}</a></th>
+                            <th><a href="{% url 'weblog:user_profile' like.blogPost_id.username %}">{{like.blogPost_id.username}}</a></th>
+                            <th><a>{{like.blogPost_id.pub_date}}</a></th>
 
-                    
-                    </tr>
+                        
+                        </tr>
+                    {% endif %}
                 {% endfor %}
                 
                 
@@ -49,6 +51,47 @@
             </tr>
         </tbody>
     </table>
+
+    <h3 class="my-4">Disikes For <a href="{% url 'weblog:post' username_in_url post_id %}">{{post_title}}</a>:</h3>
+    <table class="table">
+        <thead>
+            
+                <tr>
+                    <th>User</th>
+                    <th>Post Title</th>
+                    <th>By</th>
+                    <th>Date</th>
+
+                </tr>
+                {% for like in likes %}
+                    {% if like.likes == 0 %}
+                        <tr>
+                            <th><a href="{% url 'weblog:user_profile' like.username %}">{{like.username}}</a></th>
+                            <th><a href="{% url 'weblog:post' username_in_url like.blogPost_id.id %}">{{like.blogPost_id.title}}</a></th>
+                            <th><a href="{% url 'weblog:user_profile' like.blogPost_id.username %}">{{like.blogPost_id.username}}</a></th>
+                            <th><a>{{like.blogPost_id.pub_date}}</a></th>
+
+                        
+                        </tr>
+                    {% endif %}
+                {% endfor %}
+                
+                
+            
+        </thead>
+        <tbody>
+            <tr>
+                <td scope="row"></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td scope="row"></td>
+                <td></td>
+                <td></td>
+            </tr>
+        </tbody>
+    </table>    
 
     <p></p>  
     <!-- /.row -->
