--- a/weblog/templates/weblog/newpost.html
+++ b/weblog/templates/weblog/newpost.html
@@ -5,6 +5,16 @@
         <title>{% block title %} پست جدید {% endblock %}</title>
     </head>
 
+
+    {% block js %}
+        <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
+        <script> var simplemde = new SimpleMDE(); </script>
+    {% endblock js %}
+
+    {% block mycss %}
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
+    {% endblock mycss %}
+    
 {% block body_block %}
 
     <h1>
@@ -15,7 +25,7 @@
         {% endif %}
     </h1>
 
-    <form method="POST">
+    <form method="POST" class="mb-4" novalidate enctype="multipart/form-data">
         {% csrf_token %}
         {{form.as_p}}
         <input name="" id="" class="btn btn-primary" type="submit" value="Submit">
