Project is done
also there are some another optional views to make i will do it ASAP:

Add Comment Like , Dislike
Delete Comment Like , Dislike

Edit Post , Edit Comment
Delete Post ,
Edit User , Delete User,

and using include in templates

--- a/weblog/templates/weblog/base.html
+++ b/weblog/templates/weblog/base.html
@@ -9,7 +9,9 @@
     <!-- jquery and bootstrap added below!  -->
     <link rel="stylesheet" href="{% static 'weblog/public/bootstrap/css/bootstrap.css'%}" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'weblog/css/base.css'%}" crossorigin="anonymous">
-
+    <script src="{% static 'weblog/public/bootstrap/js/bootstrap.js'%}" crossorigin="anonymous"></script>
+    <script src="{% static 'weblog/public/jquery-3.4.1.js'%}" crossorigin="anonymous"></script>
+    <script src="{% static 'weblog/public/popper.min.js'%}" crossorigin="anonymous"></script>   
     <!-- jquery and bootstrap added above!  -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
